--- a/pes-colors.css
+++ b/pes-colors.css
@@ -16,7 +16,7 @@
   --cie-navy-200: #d3d2e2;
   --cie-navy-300: #aeacc9;
   --cie-navy-400: #8380ac;
-  --cie-navy-500: #3E3C6B;
+  --cie-navy-500: #00377B;
   --cie-navy-600: #353363;
   --cie-navy-700: #2d2b53;
   --cie-navy-800: #272546;
@@ -29,7 +29,7 @@
   --cie-orange-200: #fbcdbe;
   --cie-orange-300: #f8aa93;
   --cie-orange-400: #f47b56;
-  --cie-orange-500: #F15A29;
+  --cie-orange-500: #FF6C00;
   --cie-orange-600: #e24116;
   --cie-orange-700: #bd330f;
   --cie-orange-800: #9c2c11;
